--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,5 +1,9 @@
-# Database Configuration
-DATABASE_URL=postgres://username:password@localhost:5432/database_name
+# PostgreSQL Configuration
+POSTGRES_DB=opencourse_dev
+POSTGRES_USER=opencourse_user
+POSTGRES_PASSWORD=opencourse_password
+POSTGRES_PORT=5432
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${POSTGRES_PORT}/${POSTGRES_DB}
 
 # Better Auth Configuration
 BETTER_AUTH_SECRET=your_secret_key_here
