--- a/apps/backend/docker-compose.dev.yml
+++ b/apps/backend/docker-compose.dev.yml
@@ -2,17 +2,18 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgres:15-alpine
+    container_name: opencourse-postgres-dev
+    image: postgres:16-alpine
     environment:
-      POSTGRES_DB: postgres
+      POSTGRES_DB: opencourse_dev
       POSTGRES_USER: opencourse_user
       POSTGRES_PASSWORD: opencourse_password
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT:-5432}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U opencourse_user -d postgres"]
+      test: ["CMD-SHELL", "pg_isready -U opencourse_user"]
       interval: 10s
       timeout: 5s
       retries: 5
