--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,11 +9,15 @@
     "start": "node dist/index.js",
     "lint": "eslint src/**/*.ts",
     "test": "jest",
-    "docker:db": "docker compose up",
-    "docker:backend": "docker compose -f docker-compose.backend.yml up",
+    "docker:db": "docker compose -f docker-compose.dev.yml up postgres -d",
+    "docker:dev": "docker compose -f docker-compose.dev.yml up",
+    "docker:prod": "docker compose -f docker-compose.prod.yml up",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:create": "docker exec -it backend-opencourse-postgres-dev-1 psql -U $POSTGRES_USER -c 'CREATE DATABASE $POSTGRES_DB;'",
+    "db:reset": "docker exec -it backend-opencourse-postgres-dev-1 psql -U $POSTGRES_USER -d $POSTGRES_DB -c 'DROP SCHEMA public CASCADE; CREATE SCHEMA public;'"
   },
   "dependencies": {
     "better-auth": "^1.3.7",
