fix: module alias

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -16,13 +16,7 @@
     "resolveJsonModule": true,
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ]
-    }
+    "sourceMap": true
   },
   "ts-node": {
     "require": [
