--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -21,3 +21,11 @@ PORT=5000
 # CORS Configuration
 CORS_ORIGINS=http://localhost:3000,http://localhost:5173
 TRUSTED_ORIGINS=http://localhost:3000
+
+
+#Cloudflare R2
+R2_ENDPOINT=https://your-account-id.r2.cloudflarestorage.com
+R2_ACCESS_KEY_ID=your_access_key
+R2_SECRET_ACCESS_KEY=your_secret_key
+R2_BUCKET=opencourse-storage
+R2_PUBLIC_DOMAIN=https://cdn.yourdomain.com
