--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,6 +20,8 @@
     "db:reset": "docker exec -it backend-opencourse-postgres-dev-1 psql -U $POSTGRES_USER -d $POSTGRES_DB -c 'DROP SCHEMA public CASCADE; CREATE SCHEMA public;'"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.878.0",
+    "@aws-sdk/s3-request-presigner": "^3.878.0",
     "better-auth": "^1.3.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
