--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,8 @@
   "singleQuote": false,
   "printWidth": 80,
   "tabWidth": 2,
-  "useTabs": false
+  "useTabs": false,
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ]
 }
