--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -8,6 +8,11 @@ DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${POSTGR
 # Better Auth Configuration
 BETTER_AUTH_SECRET=your_secret_key_here
 
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+GOOGLE_REDIRECT_URI=http://localhost:5005/api/auth/callback/google
+
 # Documentation Configuration
 ENABLE_DOCS=true              # Set to false in production to disable completely
 PROTECT_DOCS=true             # Enable basic auth protection when docs are enabled  
